--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
+  file_picker: ^5.2.5
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
+  firebase_storage: ^11.0.10
   flutter:
     sdk: flutter
   fluttertoast: ^8.1.2
   font_awesome_flutter: ^10.3.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
