--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   firebase_storage: ^11.0.10
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.6.0
   fluttertoast: ^8.1.2
   font_awesome_flutter: ^10.3.0
+  google_sign_in: ^5.4.3
   provider: ^6.0.5
 
 dev_dependencies:
